--- a/asset/sass/base/typography/_copy.scss
+++ b/asset/sass/base/typography/_copy.scss
@@ -4,7 +4,6 @@ p {
     line-height: 1.75;
     margin-block-end: var(--space-6);
     margin-block-start: 0;
-    max-width: 75ch;
 }
 
 dfn,
