--- a/asset/sass/base/typography/_headings.scss
+++ b/asset/sass/base/typography/_headings.scss
@@ -38,7 +38,7 @@ h2 {
     font-size: var(--text-2xl);
     font-weight: 600;
     line-height: $font__headings-line-height;
-    margin-block-start: var(--space-12);
+    margin-block-start: var(--space-8);
     margin-block-end: var(--space-6);
 
     @media (min-width: $md) {
